--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>Bienvenue sur la page d'accueil de POLO</h1>
+<button id="b_connexion" onclick="location.href='connexion.php'">Connexion</button>
 <p>Jouer à POLO : </p> <a href="polo.html" style="font-size: 35px; align-content: center"> POLO !</a>
 </body>
 </html>
