début de inscription.php avec protection des champs du formulaire ajout du dossier php/ modification de la page index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 <h1>Bienvenue sur la page d'accueil de POLO</h1>
-<button id="b_connexion" onclick="location.href='connexion.php'">Connexion</button>
-<p>Jouer à POLO : </p> <a href="polo.html" style="font-size: 35px; align-content: center"> POLO !</a>
+<a href="connexion.php"><button>Connexion</button></a>
+<a href="inscription.php"><button>Inscription</button></a>
+<br>
+<br>
+<a href="polo.html"> <button style="font-size: 35px; align-content: center">Aller vers POLO !</button></a>
 </body>
 </html>
