Ouverture d'une nouvelle fenetre

--- a/quizz.html
+++ b/quizz.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>QUIZZ</title>
 </head>
 <body>
-<h1></h1>
+<h1>Ceci n'est pas un quizz</h1>
 </body>
 </html>
